add build process and organise folder structure

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Global unopinionated router for individual services hosted at services.webellionlimited.com",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf build/ && webpack",
+    "format": "prettier-eslint --write src/**/*.js",
+    "lint": "eslint src/**/*.js",
+    "precommit": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,9 +27,30 @@
   },
   "homepage": "https://github.com/vbence86/services.webellionlimited.com#readme",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "forever": "^0.15.3",
-    "nodemailer": "^4.1.3"
+    "fs": "^0.0.1-security",
+    "json-loader": "^0.5.7",
+    "nodemailer": "^4.1.3",
+    "path": "^0.12.7",
+    "webpack": "^3.6.0"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier-eslint --write src/**/*.js",
+      "git add"
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^4.8.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.2.3",
+    "prettier-eslint": "^8.2.0",
+    "prettier-eslint-cli": "^4.4.0",
+    "rimraf": "^2.6.2"
   }
 }
