--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "format": "prettier-eslint --write src/**/*.js",
     "lint": "eslint src/**/*.js",
     "precommit": "lint-staged",
+    "start": "forever start ./build/main.js",
+    "stop": "forever stop ./build/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
